[package]
name = "triton-candle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
cudarc = "0.10.0"
dirs = "5.0.1"
glob = "0.3.1"
lazy_static = "1.4.0"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
